Adding new files and some changes